<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/onboarding"
        tools:context=".ui.main.view.fragment.login.ResetPasswordFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_56dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logo" />

            <plm.patientslikeme2.utils.usercontrol.UserTextView
                style="@style/TextView24"
                android:layout_marginTop="@dimen/_20dp"
                android:gravity="center"
                android:text="@string/reset_password" />

            <LinearLayout
                android:id="@+id/ll_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    android:id="@+id/tv_password"
                    style="@style/TextView16"
                    android:layout_marginHorizontal="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/password" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42dp"
                    android:layout_marginTop="@dimen/_4dp"
                    android:orientation="vertical">

                    <plm.patientslikeme2.utils.usercontrol.UserEditText
                        android:id="@+id/et_password"
                        style="@style/EditText"
                        android:layout_height="@dimen/_42dp"
                        android:layout_centerInParent="true"
                        android:layout_marginHorizontal="@dimen/_20dp"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />

                    <ImageView
                        android:id="@+id/iv_visible_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:contentDescription="@null"
                        android:paddingStart="@dimen/_0dp"
                        android:paddingEnd="@dimen/_28dp"
                        android:src="@drawable/ic_visibility" />
                </RelativeLayout>

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    style="@style/TextView13"
                    android:layout_marginHorizontal="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/invalid_password_length"
                    android:textColor="@color/gray_dark_5" />

                <LinearLayout
                    android:id="@+id/ll_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/iv_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_error_red" />

                    <plm.patientslikeme2.utils.usercontrol.UserTextView
                        android:id="@+id/tv_email_error"
                        style="@style/TextView16"
                        android:layout_gravity="center|start"
                        android:layout_marginStart="@dimen/_2dp"
                        android:gravity="center|start"
                        android:paddingTop="@dimen/_2dp"
                        android:text="@string/invalid_password" />
                </LinearLayout>

                <plm.patientslikeme2.utils.usercontrol.UserButton
                    android:id="@+id/btn_submit"
                    style="@style/ButtonDarkGreen"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/submit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_changed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    android:id="@+id/tv_success"
                    style="@style/TextView16"
                    android:layout_marginHorizontal="@dimen/_30dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:drawableTop="@drawable/ic_success_green"
                    android:gravity="center"
                    android:text="@string/password_changed" />

                <plm.patientslikeme2.utils.usercontrol.UserButton
                    android:id="@+id/btn_continue"
                    style="@style/ButtonDarkGreen"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_30dp"
                    android:text="@string/hint_continue" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>