<resources>
    <string name="app_name">PatientsLikeMe</string>

    <!--Menu-->
    <string name="title_home">Home</string>
    <string name="title_community">Community</string>
    <string name="title_my_health">My Health</string>
    <string name="title_learning">Learning</string>
...
    <string name="hint_profile_headline">Add a brief bio to introduce yourself to the community.</string>
    <string name="zero_sixty_characters">0/160 characters</string>
    <string name="profile_photo">Profile photo</string>
    <string name="profile_theme_color">Profile theme color</string>
    <string name="change_photo">Change photo</string>
    <string name="create_an_account">Create an account</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_details">Please enter the email address you used when you joined. We’ll send you instructions to reset your password.</string>
    <string name="already_member_sign">Already a member? Sign in</string>
    <string name="already_member">Already a member?</string>
    <string name="fail_to_delete_condition">Failed to delete condition</string>

    <string name="looking_for_group">Looking for a specific group?</string>
...
    <string name="want_my_data_visible_non_members">I want my data to be visible to non-members.</string>
    <string name="want_my_data_visible_members_only">I want my data to be visible to PatientsLikeMe community members only. (default).</string>
    <string name="want_control_what_data_shared">I want to control what data is shared.</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="post">Post</string>
    <string name="close">close</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
...
