...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_error_red" />

                <plm.patientslikeme2.utils.usercontrol.UserTextView
                    android:id="@+id/tv_error"
                    style="@style/TextView16"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="@dimen/_2dp"
                    android:gravity="center|start"
                    android:paddingTop="@dimen/_4dp"
                    tools:text="@string/invalid_password" />
...
